# vaulty

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start-services.sh
client/: __init__.py  app.py  config.py  device_token.py  project.py  register.py  secrets.py  status.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityChart.tsx  EmptyState.tsx  Header.tsx  InitialTokenWarning.tsx  LoadingSpinner.tsx  Sidebar.tsx  StatCard.tsx  ThemeToggle.tsx  Toast.tsx
frontend/src/contexts/: ToastContext.tsx
frontend/src/hooks/: useClipboard.ts  useLoading.ts  useToast.ts
frontend/src/lib/: api.ts  theme.tsx
frontend/src/lib/utils/: constants.ts  dateFormat.ts  errorHandler.ts
frontend/src/pages/: Analytics.tsx  Audit.tsx  Auth.tsx  Dashboard.tsx  MasterTokens.tsx  ProjectView.tsx  Projects.tsx  Secrets.tsx  Settings.tsx  Tokens.tsx
frontend/src/types/: index.ts
server/: __init__.py  activity_logger.py  auth.py  confidential_tracker.py  config.py  device_id.py  encryption.py  exposure_detector.py  main.py  models.py  schemas.py
server/api/: __init__.py  dependencies.py  middleware.py  query_builder.py  utils.py
server/api/routes/: activities.py  auth.py  devices.py  docs.py  master_tokens.py  projects.py  secrets.py  tokens.py
server/data/: .gitkeep
server/mcp/: __init__.py  http_server.py  server.py
