[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaulty"
version = "1.0.0"
description = "A secure secrets management system with MCP (Model Context Protocol) integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Vaulty Team"}
]
keywords = ["secrets", "management", "mcp", "security", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
vaulty = "client.app:main"

[project.urls]
Homepage = "https://github.com/yourusername/vaulty"
Documentation = "https://github.com/yourusername/vaulty#readme"
Repository = "https://github.com/yourusername/vaulty"

[tool.setuptools]
packages = ["client"]

[tool.setuptools.package-data]
"*" = ["*.py"]



